commenting conferences and adding new positions

--- a/cvitae_GP.tex
+++ b/cvitae_GP.tex
@@ -88,14 +88,16 @@
 % \end{minipage}
 %\vspace{0.1cm}
 \section{Positions}
-\cventry{ 2021-Present}{Manager}{CERATIZIT S.A}{}{}{\mybitem{Responsible for  Artificial Intelligence and Data Science strategies for CERATIZIT worldwide.} \mybitem{Responsible for building  and leading CERATIZIT team for Artificial Intelligence and Data Science.} \mybitem{Directly reporting to CFO on AI integration on CERATIZIT business model.} }
+\cventry{ Sept 2021-Present}{Manager, Artificial Intelligence and Data Science}{Plansee Group Functions}{}{}{\mybitem{Functional lead for  AI\&DS across Plansee holdings.} \mybitem{Leading global team  AI\&DS for Plansee Group.}}
+\cventry{March 2021}{Plansee}{ acquires majority stake of CERATIZIT}{}{}{}
+\cventry{Jan 2021- Present}{Manager, Artificial Intelligence and Data Science}{CERATIZIT S.A}{}{}{\mybitem{Functional lead for  Artificial Intelligence and Data Science strategies for CERATIZIT and Plansee worldwide.} \mybitem{Responsible for building  and leading CERATIZIT team for Artificial Intelligence and Data Science.} \mybitem{Directly reporting to CFO on AI integration on CERATIZIT business model.} }
 
-\cventry{ 2018-2020}{Project Manager}{CERATIZIT Luxembourg}{}{}{{Responsible for CFD simulations services across CERATIZIT Group},  
- {Responsible for HPC soulutions for CERATIZIT Luxembourg}, {Leader of CERATIZIT  functional team for Machine Learning and Image Processing} }
+\cventry{ 2018-2020}{Project Manager}{CERATIZIT}{}{{Worldwide responsible for CFD and ML projects}}{}
+%, {Responsible for HPC soulutions for CERATIZIT Luxembourg}, {Leader of CERATIZIT  functional team for Machine Learning and Image Processing} }
 
 % \cventry{2018}{Visiting Scientist}{SINQ 2018 }{PSI, Switzerland}{High resolution neutron tomography of Tungsten Carbide}{}
 %\cventry{8/2018}{Visiting Scientist}{SINQ 2018 }{PSI, Switzerland}{Low resulution neutron tomography of Tungsten Carbide}{}
-\cventry{ 2017}{Algorithm Development Engineer}{Wikki London (Parallelization of an OpenFOAM library)}{}{}{}{}
+\cventry{ 2017}{Algorithm Development Engineer}{Wikki London }{}{}{}{}
 
 % \cventry{ 2016}{Algorithm Development Engineer}{Inutech GmbH Nuremberg (Parallelization of a multiphysics solver)}{\textit{https://inutech.de}}{}{}{}
 
@@ -115,14 +117,14 @@
 \cventry{2009-2012}{Bachelor in Energetical Engineering}{University of Bologna}{}{}{}
 
 \section{Post-Graduate Training}
-%\cventry{2020}{FTM Management Training}{CERATIZIT}{}{}{}
+\cventry{2020}{FTM Management Training}{CERATIZIT}{}{}{}
 \cventry{2019}{SCRUM Agile Project Management Framework}{Emendare}{}{}{}
 \cventry{2019}{Fundamentals of Deep Learning}{NVIDIA Deep Learning Institute}{}{}{}{}
 \cventry{2017}{IP and R\&D}{University of Luxembourg}{Doctoral Education}{}{}
 % \cventry{2016}{Large Eddy Simulations: Theory and Applications}{Von Karman Institute \textit{http://vki.com}}{}{}{}
 \cventry{2015}{High Performance Computing School}{University of Luxembourg}{}{}{}
 \cventry{2016}{Conflict Management}{University of Luxembourg}{}{}{}
-\cventry{2016}{Scientific Presentation Skills}{University of Luxembourg}{}{}{}
+%\cventry{2016}{Scientific Presentation Skills}{University of Luxembourg}{}{}{}
 
 % \section{Selected Projects}
 % \cventry{2020-Current}{Industrial Project Manager}{HybridSimCVD FNR Luxembourg}{}{}{}
@@ -161,7 +163,7 @@
 \cvlanguage{C2}{Italian}{}
 \cvlanguage{C2}{English}{}
 \cvlanguage{B2}{French}{}
-\cvlanguage{B1}{Spanish}{}
+\cvlanguage{B2}{Spanish}{}
 \cvlanguage{A2}{German}{}
 % \languageknowledge{Italian}{6}
 % \languageknowledge{English}{6}
@@ -176,7 +178,7 @@
 \section{Recognitions}
 \cvline{Powder Technology}{Outstanding Contribution in Reviewing }
  \cvline{University of Luxembourg}{Excellence in Ph.D. research }
-\cvline{University of Bologna}{Excellence and  Merit award 2013}
+\cvline{University of Bologna}{Excellence and  Merit award}
 \end{minipage}
 
 
@@ -203,63 +205,69 @@
 \end{flushright}
 \end{minipage}
 
-\section{Reviewing Activity}
-\cvline{}{ Served as reviewer for\textit{Journal of Computational Physics}, \textit{Powder Technology} , \textit{Particulogy} , \textit{Industrial \& Engineering Chemistry Research} and \textit{Applied Mathematical Modelling}.}
-
-\section{Organization of Events}
-\cventry{2018}{Organizer}{Symposium at WCCM2018}{\textit{http://www.wccm2018.org}}{}{}
-
-\cventry{2017}{Principal Organizer}{ Symposium  at ICNAAM2017}{\textit{https://icnaam.org}}{}{}{}
-
-\cventry{2016}{Organizer}{ Symposium  at ICNAAM2016}{\textit{https://icnaam.org}}{}{}{}
-% \section{Informatics}
-% \cvline{Basic}{\small  Ruby, nanoc, Mathematica, XML, COMSOL Multiphysics\textregistered }
-% \cvline{Intermediate}{\small Matlab, GNU Octave, MPI, Dakota}
-% \cvline{Advanced}{\small  Python, C/C++, Git, OpenFoam, Paraview, Salome}
-
-\section{Selected Publications}
-% \cvline{}{ \newline \textit{}}\cvline{}{ G. Pozzetti, B. Peters
-\small
-\cvline{2020} {B.Peters, \textbf{G.Pozzetti}
-\textit{Numerical Analysis of Powder Deposition in Direct Material Injection} Granular Matter.}
-
-\cvline{2019}{ E.Rabadan Santana, \textbf{G. Pozzetti}, B. Peters
-\textit{Application of a dual-grid multiscale CFD-DEM coupling method to model the raceway dynamics in packed bed reactors}  Chemical Engineering Sciences.}
-
-\cvline{2019}{ \textbf{G. Pozzetti}, H. Jasak, X. Besseron, A. Rousset, B. Peters
-\textit{A parallel dual-grid multiscale approach to CFD-DEM couplings}  Journal of Computational Physics.}
-
-\cvline{2019}{ E.Rabadan Santana, \textbf{G. Pozzetti}, B. Peters
-\textit{Application of a dual-grid multiscale CFD-DEM coupling method to model the raceway dynamics in packed bed reactors}  Chemical Engineering Sciences.}
-
-\cvline{2018}{ \textbf{G. Pozzetti}, X. Besseron, A. Rousset, B. Peters
-\textit{A co-located partitions strategy for parallel CFD-DEM Couplings}   Advanced Powder Technology.}
-
-\cvline{2018}{ \textbf{G. Pozzetti}, B. Peters
-\textit{A Numerical approach for the evaluation of particle-induced erosion in an Abrasive Waterjet focusing tube} Powder Technology.}
-
-\cvline{2018}{ \textbf{G. Pozzetti}, B. Peters
-\textit{A Multiscale DEM-VOF Method for the simulation of three-phase flows} International Journal of Multiphase Flow.}
-
-\cvline{2018}{ B. Peters, M. Baniasadi, M.Baniasadi, X.Besseron, A.E.Donoso, M.Mohseni, \textbf{G. Pozzetti}
-\textit{The XDEM Multi-physics and Multi-scale Simulation Technology: Review on DEM-CFD Coupling, Methodology  and Engineering Applications} Particuology.}
-
-\cvline{2017}{ \textbf{G. Pozzetti}, B. Peters
-\textit{Evaluating Erosion Patterns in an abrasive water jet cutting nozzle using XDEM} Advances in Powder Metallurgy and Particulate Materials.}
-
-\cvline{2017}{ \textbf{G. Pozzetti}, B. Peters
-\textit{On the performances of an overlapping domain parallelization strategy for Eulerian-Lagrangian Multiphysics software} AIP CP.}
-\cvline{2017}{ \textbf{G. Pozzetti}, B. Peters
-\textit{Flow characteristics of metallic powder grains for additive manufacturing} EPJ WC.}
-
+% \section{Reviewing Activity}
+% \cvline{}{ Served as reviewer for\textit{Journal of Computational Physics}, \textit{Powder Technology} , \textit{Particulogy} , \textit{Industrial \& Engineering Chemistry Research} and \textit{Applied Mathematical Modelling}.}
+% 
+% \section{Organization of Events}
+% \cventry{2018}{Organizer}{Symposium at WCCM2018}{\textit{http://www.wccm2018.org}}{}{}
+% 
+% \cventry{2017}{Principal Organizer}{ Symposium  at ICNAAM2017}{\textit{https://icnaam.org}}{}{}{}
+% 
+% \cventry{2016}{Organizer}{ Symposium  at ICNAAM2016}{\textit{https://icnaam.org}}{}{}{}
+% % \section{Informatics}
+% % \cvline{Basic}{\small  Ruby, nanoc, Mathematica, XML, COMSOL Multiphysics\textregistered }
+% % \cvline{Intermediate}{\small Matlab, GNU Octave, MPI, Dakota}
+% % \cvline{Advanced}{\small  Python, C/C++, Git, OpenFoam, Paraview, Salome}
+% 
+% \section{Selected Publications}
+% % \cvline{}{ \newline \textit{}}\cvline{}{ G. Pozzetti, B. Peters
+% \small
+% \cvline{2020} {B.Peters, \textbf{G.Pozzetti}
+% \textit{Numerical Analysis of Powder Deposition in Direct Material Injection} Granular Matter.}
+% 
+% \cvline{2019}{ E.Rabadan Santana, \textbf{G. Pozzetti}, B. Peters
+% \textit{Application of a dual-grid multiscale CFD-DEM coupling method to model the raceway dynamics in packed bed reactors}  Chemical Engineering Sciences.}
+% 
+% \cvline{2019}{ \textbf{G. Pozzetti}, H. Jasak, X. Besseron, A. Rousset, B. Peters
+% \textit{A parallel dual-grid multiscale approach to CFD-DEM couplings}  Journal of Computational Physics.}
+% 
+% \cvline{2019}{ E.Rabadan Santana, \textbf{G. Pozzetti}, B. Peters
+% \textit{Application of a dual-grid multiscale CFD-DEM coupling method to model the raceway dynamics in packed bed reactors}  Chemical Engineering Sciences.}
+% 
+% \cvline{2018}{ \textbf{G. Pozzetti}, X. Besseron, A. Rousset, B. Peters
+% \textit{A co-located partitions strategy for parallel CFD-DEM Couplings}   Advanced Powder Technology.}
+% 
+% \cvline{2018}{ \textbf{G. Pozzetti}, B. Peters
+% \textit{A Numerical approach for the evaluation of particle-induced erosion in an Abrasive Waterjet focusing tube} Powder Technology.}
+% 
+% \cvline{2018}{ \textbf{G. Pozzetti}, B. Peters
+% \textit{A Multiscale DEM-VOF Method for the simulation of three-phase flows} International Journal of Multiphase Flow.}
+% 
+% \cvline{2018}{ B. Peters, M. Baniasadi, M.Baniasadi, X.Besseron, A.E.Donoso, M.Mohseni, \textbf{G. Pozzetti}
+% \textit{The XDEM Multi-physics and Multi-scale Simulation Technology: Review on DEM-CFD Coupling, Methodology  and Engineering Applications} Particuology.}
+% 
 % \cvline{2017}{ \textbf{G. Pozzetti}, B. Peters
-% \textit{On the choice of a phase interchange strategy for a Multiscale DEM-VOF method} AIP CP.}
+% \textit{Evaluating Erosion Patterns in an abrasive water jet cutting nozzle using XDEM} Advances in Powder Metallurgy and Particulate Materials.}
+% 
+% \cvline{2017}{ \textbf{G. Pozzetti}, B. Peters
+% \textit{On the performances of an overlapping domain parallelization strategy for Eulerian-Lagrangian Multiphysics software} AIP CP.}
+% \cvline{2017}{ \textbf{G. Pozzetti}, B. Peters
+% \textit{Flow characteristics of metallic powder grains for additive manufacturing} EPJ WC.}
+% 
+% % \cvline{2017}{ \textbf{G. Pozzetti}, B. Peters
+% % \textit{On the choice of a phase interchange strategy for a Multiscale DEM-VOF method} AIP CP.}
+% 
+% \cvline{2015}{D.Cerroni, S.Manservisi and \textbf{G. Pozzetti},
+% \textit{A preliminary investigation of the growth of an aneurysm with a multiscale monolithic Fluid-Structure interaction solver} Journal of Physics CS DOI: 10.1088/1742-6596/655/1/012050.}
+% 
+% \cvline{2015}{D Cerroni  , R Da Via , S Manservisi , F Menghini  , \textbf{G. Pozzetti}  and R Scardovelli
+% \textit{Numerical validation of a $k-\omega-k_{\theta}-\omega_{\theta}$  heat transfer turbulence model for heavy liquid metals} Journal of Physics CS DOI:10.1088/1742-6596/655/1/012046.}
 
-\cvline{2015}{D.Cerroni, S.Manservisi and \textbf{G. Pozzetti},
-\textit{A preliminary investigation of the growth of an aneurysm with a multiscale monolithic Fluid-Structure interaction solver} Journal of Physics CS DOI: 10.1088/1742-6596/655/1/012050.}
 
-\cvline{2015}{D Cerroni  , R Da Via , S Manservisi , F Menghini  , \textbf{G. Pozzetti}  and R Scardovelli
-\textit{Numerical validation of a $k-\omega-k_{\theta}-\omega_{\theta}$  heat transfer turbulence model for heavy liquid metals} Journal of Physics CS DOI:10.1088/1742-6596/655/1/012046.}
+
+
+
+
 
 %Minor Pubblications
 % \cvline{}{ G. Pozzetti, X.Besseron, A. Rousset, B.Peters
@@ -287,19 +295,19 @@
 % \normalsize
 
 
-\section{Selected Scientific Conferences}
-% % \cvline{2015-2018}{Presented at 9 international conferences hosting accademical and industrial audience.}
-% %
-\cvline{}{ G. Pozzetti,
-\textit{A parallel multiscale DEM-VOF Method for large scale simulations of three phase flows} ECCM-ECFD2018, Glasgow}
-\cvline{}{ G. Pozzetti,
-\textit{LES-VOF Simulations of a pure waterjet developing inside an AWJ Nozzle: Preliminary observations and guidelines} WJTA2017, New Orleans}
-\cvline{}{ G. Pozzetti
-\textit{Multiscale-Multiphiysics approaches for engineering applications} ICNAAM2017, Thessaloniki}
-\cvline{}{ G. Pozzetti
-\textit{Evaluating Erosion Patterns in an Abrasive Water Jet Cutting Nozzle using XDEM} POWDERMET2017, Las Vegas}
-\cvline{}{ G. Pozzetti
-\textit{On the choice of a phase interchange strategy for a Multiscale DEM-VOF method} International Conference of Numerical Analysis and applied mathematics ICNAAM2016, Rhodes}
+% \section{Selected Scientific Conferences}
+% % % \cvline{2015-2018}{Presented at 9 international conferences hosting accademical and industrial audience.}
+% % %
+% \cvline{}{ G. Pozzetti,
+% \textit{A parallel multiscale DEM-VOF Method for large scale simulations of three phase flows} ECCM-ECFD2018, Glasgow}
+% \cvline{}{ G. Pozzetti,
+% \textit{LES-VOF Simulations of a pure waterjet developing inside an AWJ Nozzle: Preliminary observations and guidelines} WJTA2017, New Orleans}
+% \cvline{}{ G. Pozzetti
+% \textit{Multiscale-Multiphiysics approaches for engineering applications} ICNAAM2017, Thessaloniki}
+% \cvline{}{ G. Pozzetti
+% \textit{Evaluating Erosion Patterns in an Abrasive Water Jet Cutting Nozzle using XDEM} POWDERMET2017, Las Vegas}
+% \cvline{}{ G. Pozzetti
+% \textit{On the choice of a phase interchange strategy for a Multiscale DEM-VOF method} International Conference of Numerical Analysis and applied mathematics ICNAAM2016, Rhodes}
 % \cvline{}{ G. Pozzetti
 % \textit{A LES-DEM-VOF Method for Turbulent three phase flows} International Conference of Multiphase flows ICMF2016, Florence}
 % \cvline{}{ G. Pozzetti
