changing structure and adding project

--- a/cvitae_GP_2022.tex
+++ b/cvitae_GP_2022.tex
@@ -25,13 +25,13 @@
 %\title{\Large Ph.D.}               % optional, remove the line if not wanted
 %\address{38 Rue de Beggen}{L-1220 Luxembourg}    % optional, remove the line if not wanted
 %\mobile{+30 698 4385057}                    % optional, remove the line if not wanted
-\phone{+352 661 357 883}                      % optional, remove the line if not wanted
+% \phone{+352 661 357 883}                      % optional, remove the line if not wanted
 %\fax{fax (optional)}                          % optional, remove the line if not wanted
-\email{pozzetti.gabriele@gmail.com }% ,gabriele.pozzetti@uni.lu}                      % optional, remove the line if not wanted
+% \email{pozzetti.gabriele@gmail.com }% ,gabriele.pozzetti@uni.lu}                      % optional, remove the line if not wanted
 %\email{\href{mailto:s.dakourou@gmail.com}{s.dakourou@gmail.com}}                      % optional, remove the line if not wanted
 %\homepage{\href{http://gr.linkedin.com/pub/stefania-dakourou/41/21a/396}{LinkedIn Profile}}                % optional, remove the line if not wanted
 %\extrainfo{additional information (optional)} % optional, remove the line if not wanted
- %\photo[128pt]{g_pozz.jpg}                         % '64pt' is the height the picture must be resized to, 0.4pt is the thickness of the frame around it (put it to 0pt for no frame) and 'picture' is the name of the picture file; optional, remove the line if not wanted
+%  \photo[128pt]{g_pozz.jpg}                         % '64pt' is the height the picture must be resized to, 0.4pt is the thickness of the frame around it (put it to 0pt for no frame) and 'picture' is the name of the picture file; optional, remove the line if not wanted
 %\quote{Some quote (optional)}                 % optional, remove the line if not wanted
 
 % to show numerical labels in the bibliography; only useful if you make citations in your resume
@@ -83,8 +83,13 @@
 %\cvline{Citizenship}{Italian}
 %\cvline{Age}{27}
 %\end{minipage}
-\begin{minipage}[b]{.65\linewidth}
+\begin{minipage}[b]{.55\linewidth}
 \textit{I am a manager with a Ph.D. in computational sciences. My main experitise is to lead  international teams to unlock digital opportunities for our future.}
+\end{minipage}
+\begin{minipage}[b]{.45\linewidth}
+\begin{flushright}
+\qrcode[hyperlink,height=1.2in]{https://www.linkedin.com/in/gabriele-pozzetti-289079134/}
+\end{flushright}
 \end{minipage}
 \vspace{0.1cm}
 \section{Positions}
@@ -111,6 +116,13 @@
 
 % \cventry{2015-2018}{Teaching Assistant}{Continuum Mechanics}{\textit{University of Luxembourg}}{}{}
 
+\section{Recent Projects}
+\cventry{2021}{Pricing tool with ML }{CERATIZIT}{}{}{}
+\cventry{2021}{Shopfloor optimization }{CERATIZIT}{}{}{}
+\cventry{2021}{Automated sales forecasting platform }{CERATIZIT}{}{}{}
+\cventry{2021}{Predictive Mainteinance for Quality optimization }{CERATIZIT}{}{}{}
+
+
 \section{Education}
 \cventry{2015-2018}{PhD in Computational Engineering}{University of Luxembourg}{}{}{}
 \cventry{2012-2014}{Master in Nuclear and Energetical Engineering}{University of Bologna}{}{}{}%{(110 cum Laude, exams average 30/30)}
@@ -120,7 +132,7 @@
 \cventry{2020}{Management Training}{CERATIZIT}{}{}{}
 \cventry{2019}{SCRUM Agile Project Management Framework}{Emendare}{}{}{}
 \cventry{2019}{Fundamentals of Deep Learning}{NVIDIA Deep Learning Institute}{}{}{}{}
-\cventry{2017}{IP and R\&D}{University of Luxembourg}{Doctoral Education}{}{}
+% \cventry{2017}{IP and R\&D}{University of Luxembourg}{Doctoral Education}{}{}
 % \cventry{2016}{Large Eddy Simulations: Theory and Applications}{Von Karman Institute \textit{http://vki.com}}{}{}{}
 \cventry{2015}{High Performance Computing School}{University of Luxembourg}{}{}{}
 \cventry{2016}{Conflict Management}{University of Luxembourg}{}{}{}
@@ -158,7 +170,7 @@
 % \end{minipage}
 
 
-\begin{minipage}[t]{0.45\linewidth}
+\begin{minipage}[t]{0.4\linewidth}
 \section{Languages}
 \cvlanguage{C2}{Italian}{}
 \cvlanguage{C2}{English}{}
@@ -171,40 +183,40 @@
 % \languageknowledge{Spanish}{4}
 % \languageknowledge{German}{2}
 \end{minipage}
-\begin{minipage}[t]{0.05\linewidth}
+\begin{minipage}[t]{0.01\linewidth}
 \-
 \end{minipage}
 \begin{minipage}[t]{0.65\linewidth}
 \section{Recognitions}
-\cvline{Plansee Group}{Strong Inventor Medal }
-%\cvline{Powder Technology}{Outstanding Contribution in Reviewing }
- \cvline{University of Luxembourg}{Excellence in Ph.D. Research }
-\cvline{University of Bologna}{Excellence and  Merit Award}
+\cvline{2021}{Strong Inventor Medal, \tiny{Plansee} }{}
+\cvline{2019}{Outstanding Reviewer,\tiny{Powder Technology}}
+\cvline{2018}{Excellence in Ph.D. Research, \tiny{University of Luxembourg} }
+\cvline{2013}{Excellence and  Merit Award, \tiny{University of Bologna}}
 \end{minipage}
 
 
 \vspace{0.2in}
 %\section{Useful Links}
-\begin{minipage}[b]{.5\linewidth}
-\begin{flushleft}
-\qrcode[hyperlink,height=1.2in]{https://www.linkedin.com/in/gabriele-pozzetti-289079134/}\\ \vspace{0.1in}
-\href{https://www.linkedin.com/in/gabriele-pozzetti-289079134/}{Linkedin}
-\end{flushleft}
-\end{minipage}
 % \begin{minipage}[b]{.5\linewidth}
-% \section{Languages}
-% \languageknowledge{Italian}{6}
-% \languageknowledge{English}{6}
-% \languageknowledge{French}{4}
-% \languageknowledge{Spanish}{4}
-% \languageknowledge{German}{2}
+% \begin{flushleft}
+% \qrcode[hyperlink,height=1.2in]{https://www.linkedin.com/in/gabriele-pozzetti-289079134/}\\ \vspace{0.1in}
+% \href{https://www.linkedin.com/in/gabriele-pozzetti-289079134/}{Linkedin}
+% \end{flushleft}
 % \end{minipage}
-\begin{minipage}[b]{.5\linewidth}
-\begin{flushright}
-\qrcode[hyperlink,height=1.2in]{https://scholar.google.com/citations?user=A-AGeScAAAAJ&hl=it&oi=ao}\\ \vspace{0.1in}
-\href{https://scholar.google.com/citations?user=A-AGeScAAAAJ&hl=it&oi=ao}{Google Scholar}
-\end{flushright}
-\end{minipage}
+% % \begin{minipage}[b]{.5\linewidth}
+% % \section{Languages}
+% % \languageknowledge{Italian}{6}
+% % \languageknowledge{English}{6}
+% % \languageknowledge{French}{4}
+% % \languageknowledge{Spanish}{4}
+% % \languageknowledge{German}{2}
+% % \end{minipage}
+% \begin{minipage}[b]{.5\linewidth}
+% \begin{flushright}
+% \qrcode[hyperlink,height=1.2in]{https://scholar.google.com/citations?user=A-AGeScAAAAJ&hl=it&oi=ao}\\ \vspace{0.1in}
+% \href{https://scholar.google.com/citations?user=A-AGeScAAAAJ&hl=it&oi=ao}{Google Scholar}
+% \end{flushright}
+% \end{minipage}
 
 % \section{Reviewing Activity}
 % \cvline{}{ Served as reviewer for\textit{Journal of Computational Physics}, \textit{Powder Technology} , \textit{Particulogy} , \textit{Industrial \& Engineering Chemistry Research} and \textit{Applied Mathematical Modelling}.}
