improved projects section

--- a/cvitae_GP_2022.tex
+++ b/cvitae_GP_2022.tex
@@ -84,14 +84,14 @@
 %\cvline{Age}{27}
 %\end{minipage}
 \begin{minipage}[b]{.55\linewidth}
-\textit{I am a manager with a Ph.D. in computational sciences. My main experitise is to lead  international teams to unlock digital opportunities for our future.}
+\textit{I am a manager with a Ph.D. in computational sciences. I have years of experience in vertical and lateral leadership of international teams to unlock digital opportunities for our future.}
 \end{minipage}
 \begin{minipage}[b]{.45\linewidth}
 \begin{flushright}
 \qrcode[hyperlink,height=1.2in]{https://www.linkedin.com/in/gabriele-pozzetti-289079134/}
 \end{flushright}
 \end{minipage}
-\vspace{0.1cm}
+\vspace{0.05cm}
 \section{Positions}
 % \cventry{ Sept 2021-Present}{Manager, Artificial Intelligence and Data Science}{Plansee Group Functions}{}{}{\mybitem{Functional lead for  AI\&DS across Plansee holdings.} \mybitem{Leading global team  AI\&DS for Plansee Group.}}
 % \cventry{March 2021}{Plansee}{ acquires majority stake of CERATIZIT}{}{}{}
@@ -116,11 +116,11 @@
 
 % \cventry{2015-2018}{Teaching Assistant}{Continuum Mechanics}{\textit{University of Luxembourg}}{}{}
 
-\section{Recent Projects}
-\cventry{2021}{Pricing tool with ML }{CERATIZIT}{}{}{}
-\cventry{2021}{Shopfloor optimization }{CERATIZIT}{}{}{}
-\cventry{2021}{Automated sales forecasting platform }{CERATIZIT}{}{}{}
-\cventry{2021}{Predictive Mainteinance for Quality optimization }{CERATIZIT}{}{}{}
+\section{Relevant Projects}
+\cventry{2021}{ML for Pricing}{A behaviour-driven pricing strategy for our e-commerce }{}{}{}
+\cventry{2021}{Digital trasformation of the shoplfoor}{Automated alert system for sintering furnace enabling quality-driven predictive mainteinance}{}{}{}
+\cventry{2021}{Automated sales forecasting platform}{A data-driven approach to capital allocation}{}{}{}
+\cventry{2021}{ML optimizer for powder metallurgy}{Identify faulty compositions before production}{}{}{}
 
 
 \section{Education}
