almost ready version

--- a/cvitae_GP_2022.tex
+++ b/cvitae_GP_2022.tex
@@ -83,26 +83,25 @@
 %\cvline{Citizenship}{Italian}
 %\cvline{Age}{27}
 %\end{minipage}
-\begin{minipage}[b]{.55\linewidth}
-\textit{I am a manager with a Ph.D. in computational sciences. I have years of experience in vertical and lateral leadership of international teams to unlock digital opportunities for our future.}
+\begin{minipage}[b]{.75\linewidth}
+\textit{I am a manager with a Ph.D. in computational sciences and years of experience in vertical and lateral leadership of international development teams. I am passionate about human centered digital solutions and believe they are the key to a more sustainable and even more exciting future.}
 \end{minipage}
-\begin{minipage}[b]{.45\linewidth}
+\begin{minipage}[t!]{.25\linewidth}
 \begin{flushright}
-\qrcode[hyperlink,height=1.2in]{https://www.linkedin.com/in/gabriele-pozzetti-289079134/}
+\qrcode[hyperlink,height=1.1in]{https://www.linkedin.com/in/gabriele-pozzetti-289079134/}\\\,
 \end{flushright}
 \end{minipage}
-\vspace{0.05cm}
+\vspace{0.1cm}
 \section{Positions}
 % \cventry{ Sept 2021-Present}{Manager, Artificial Intelligence and Data Science}{Plansee Group Functions}{}{}{\mybitem{Functional lead for  AI\&DS across Plansee holdings.} \mybitem{Leading global team  AI\&DS for Plansee Group.}}
 % \cventry{March 2021}{Plansee}{ acquires majority stake of CERATIZIT}{}{}{}
-\cventry{Jan 2021- Present}{Manager, Artificial Intelligence and Data Science}{CERATIZIT S.A}{}{}{\mybitem{Responsible for building  and leading CERATIZIT core team for AI and Data Science.}\mybitem{Functional lead for  AI and Data Science strategies for CERATIZIT and Plansee worldwide.}  \mybitem{Directly reporting to CFO on AI integration within CERATIZIT business model.} }
-
-\cventry{ 2018-2020}{Project Manager}{CERATIZIT}{}{{Worldwide responsible for ML and CFD  projects}}{}
+\cventry{Jan 2021- Present}{Manager, Artificial Intelligence and Data Science}{CERATIZIT S.A}{}{}{\mybitem{Responsible for building  and leading CERATIZIT core team for AI and Data Science.}\mybitem{Functional lead for  AI and Data Science activities within CERATIZIT and Plansee worldwide.}  \mybitem{Directly reporting to CFO on AI integration within CERATIZIT business model.} }
+\cventry{ 2018-2020}{Project Manager}{CERATIZIT}{}{{Responsible for ML and CFD  projects worldwide}}{}
 %, {Responsible for HPC soulutions for CERATIZIT Luxembourg}, {Leader of CERATIZIT  functional team for Machine Learning and Image Processing} }
 
 % \cventry{2018}{Visiting Scientist}{SINQ 2018 }{PSI, Switzerland}{High resolution neutron tomography of Tungsten Carbide}{}
 %\cventry{8/2018}{Visiting Scientist}{SINQ 2018 }{PSI, Switzerland}{Low resulution neutron tomography of Tungsten Carbide}{}
-\cventry{ 2017}{Algorithm Development Engineer}{Wikki London }{}{}{}{}
+\cventry{ 2017}{Algorithm Development Engineer}{Wikki London}{}{}{}{}
 
 % \cventry{ 2016}{Algorithm Development Engineer}{Inutech GmbH Nuremberg (Parallelization of a multiphysics solver)}{\textit{https://inutech.de}}{}{}{}
 
@@ -117,10 +116,10 @@
 % \cventry{2015-2018}{Teaching Assistant}{Continuum Mechanics}{\textit{University of Luxembourg}}{}{}
 
 \section{Relevant Projects}
-\cventry{2021}{ML for Pricing}{A behaviour-driven pricing strategy for our e-commerce }{}{}{}
-\cventry{2021}{Digital trasformation of the shoplfoor}{Automated alert system for sintering furnace enabling quality-driven predictive mainteinance}{}{}{}
-\cventry{2021}{Automated sales forecasting platform}{A data-driven approach to capital allocation}{}{}{}
-\cventry{2021}{ML optimizer for powder metallurgy}{Identify faulty compositions before production}{}{}{}
+\cventry{2021-Present}{ML for Pricing}{A behaviour-driven pricing strategy for CERATIZIT e-commerce }{}{}{}
+\cventry{2021-Present}{Digital Trasformation of the Shoplfoor}{Automated alert system for sintering furnace enabling quality-driven predictive mainteinance}{}{}{}
+\cventry{2020-Present}{Automated Sales Forecasting Platform}{A data-driven approach for capital allocation}{}{}{}
+\cventry{2020-Present}{ML for Powder Metallurgy}{Identify suboptimal compositions before production}{}{}{}
 
 
 \section{Education}
