--- a/cvitae_GP_2022.tex
+++ b/cvitae_GP_2022.tex
@@ -84,7 +84,7 @@
 %\cvline{Age}{27}
 %\end{minipage}
 \begin{minipage}[b]{.75\linewidth}
-\textit{I am a manager with a Ph.D. in computational sciences and years of experience in vertical and lateral leadership of international development teams. I am passionate about human centered digital solutions and believe they are the key to a more sustainable and even more exciting future.}
+\textit{I am a manager with a Ph.D. in computational sciences and experience in vertical and lateral leadership of international development teams. I am passionate about human centered digital solutions and believe they are the key to a more sustainable and even more exciting future.}
 \end{minipage}
 \begin{minipage}[t!]{.25\linewidth}
 \begin{flushright}
@@ -117,7 +117,7 @@
 
 \section{Relevant Projects}
 \cventry{2021-Present}{ML for Pricing}{A behaviour-driven pricing strategy for CERATIZIT e-commerce }{}{}{}
-\cventry{2021-Present}{Digital Trasformation of the Shoplfoor}{Automated alert system for sintering furnace enabling quality-driven predictive mainteinance}{}{}{}
+\cventry{2021-Present}{Digital Trasformation of the Shopfloor}{Automated alert system for sintering furnace enabling quality-driven predictive mainteinance}{}{}{}
 \cventry{2020-Present}{Automated Sales Forecasting Platform}{A data-driven approach for capital allocation}{}{}{}
 \cventry{2020-Present}{ML for Powder Metallurgy}{Identify suboptimal compositions before production}{}{}{}
 
