recentering the qr and text better

--- a/cvitae_GP_2022.tex
+++ b/cvitae_GP_2022.tex
@@ -83,10 +83,10 @@
 %\cvline{Citizenship}{Italian}
 %\cvline{Age}{27}
 %\end{minipage}
-\begin{minipage}[b]{.75\linewidth}
+\begin{minipage}[]{.75\linewidth}
 \textit{I am a manager with a Ph.D. in computational engineering and experience in vertical and lateral leadership of international development teams. I am passionate about human-centered digital solutions and believe they are the key to a more sustainable and even more exciting future.}
 \end{minipage}
-\begin{minipage}[t!]{.25\linewidth}
+\begin{minipage}[]{.25\linewidth}
 \begin{flushright}
 \qrcode[hyperlink,height=1.1in]{https://www.linkedin.com/in/gabriele-pozzetti-289079134/}\\\,
 \end{flushright}
@@ -95,7 +95,8 @@
 \section{Positions}
 % \cventry{ Sept 2021-Present}{Manager, Artificial Intelligence and Data Science}{Plansee Group Functions}{}{}{\mybitem{Functional lead for  AI\&DS across Plansee holdings.} \mybitem{Leading global team  AI\&DS for Plansee Group.}}
 % \cventry{March 2021}{Plansee}{ acquires majority stake of CERATIZIT}{}{}{}
-\cventry{Jan 2021- Present}{Manager, Artificial Intelligence and Data Science}{CERATIZIT S.A}{}{}{\mybitem{Responsible for building  and leading CERATIZIT core team for AI and Data Science.}\mybitem{Functional lead for  AI and Data Science activities within CERATIZIT and Plansee worldwide.}  \mybitem{Directly reporting to CFO on AI integration within CERATIZIT business model.} }
+\cventry{Jan 2021- Present}{Manager, Artificial Intelligence and Data Science}{CERATIZIT S.A} %and PGF S.A}
+{}{}{\mybitem{Responsible for building  and leading CERATIZIT core team for AI and Data Science.}\mybitem{Functional lead for  AI and Data Science activities within CERATIZIT and Plansee worldwide.}  \mybitem{Directly reporting to CFO on AI integration within CERATIZIT business model.} }
 \cventry{ 2018-2020}{Project Manager}{CERATIZIT}{}{{Responsible for ML and CFD  projects worldwide}}{}
 %, {Responsible for HPC soulutions for CERATIZIT Luxembourg}, {Leader of CERATIZIT  functional team for Machine Learning and Image Processing} }
 
