resizing qr and improving project

--- a/cvitae_GP_2022.tex
+++ b/cvitae_GP_2022.tex
@@ -88,7 +88,7 @@
 \end{minipage}
 \begin{minipage}[]{.25\linewidth}
 \begin{flushright}
-\qrcode[hyperlink,height=1.1in]{https://www.linkedin.com/in/gabriele-pozzetti-289079134/}\\\,
+\qrcode[hyperlink,height=0.9in]{https://www.linkedin.com/in/gabriele-pozzetti-289079134/}\\\,
 \end{flushright}
 \end{minipage}
 \vspace{0.1cm}
@@ -118,7 +118,7 @@
 
 \section{Relevant Projects}
 \cventry{2021-Present}{ML for Pricing}{A behaviour-driven pricing strategy for CERATIZIT e-commerce }{}{}{}
-\cventry{2021-Present}{Digital Trasformation of the Shopfloor}{Automated alert system for sintering furnace enabling quality-driven predictive mainteinance}{}{}{}
+\cventry{2021-Present}{Sinter AI}{Automated alert system, semifinished product design and quality driven predictive maintenance for sintering}{}{}{}
 \cventry{2020-Present}{Automated Sales Forecasting Platform}{A data-driven approach for capital allocation}{}{}{}
 \cventry{2020-Present}{ML for Powder Metallurgy}{Identifying suboptimal compositions before production}{}{}{}
 
@@ -130,7 +130,7 @@
 
 \section{Post-Graduate Training}
 \cventry{2020}{Management Training}{CERATIZIT}{}{}{}
-\cventry{2019}{SCRUM Agile Project Management Framework}{Emendare}{}{}{}
+\cventry{2019}{SCRUM Training}{Emendare}{}{}{}
 \cventry{2019}{Fundamentals of Deep Learning}{NVIDIA Deep Learning Institute}{}{}{}{}
 % \cventry{2017}{IP and R\&D}{University of Luxembourg}{Doctoral Education}{}{}
 % \cventry{2016}{Large Eddy Simulations: Theory and Applications}{Von Karman Institute \textit{http://vki.com}}{}{}{}
